--- a/Repetition.ipynb
+++ b/Repetition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9cbc570d",
+   "id": "24fd7431",
    "metadata": {},
    "source": [
     "# Function"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "79bb771f",
+   "id": "148aea62",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6944df",
+   "id": "98453134",
    "metadata": {},
    "source": [
     "# Class"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "080711e5",
+   "id": "3162fba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cd79acd8",
+   "id": "64d5eae6",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fcfb3f37",
+   "id": "af31867b",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb13204",
+   "id": "2cf26950",
    "metadata": {},
    "source": [
     "# String build in functions"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f7b70339",
+   "id": "6ef0b8ce",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e9c7e3a4",
+   "id": "8999d55d",
    "metadata": {},
    "outputs": [
     {
@@ -158,11 +158,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "ea206eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jython'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skill.replace(\"P\",\"J\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "aac8756f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Doto Analyst'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job_title = \"Data Analyst\"\n",
+    "job_title.replace(\"a\", \"o\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3248b06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "split(self, /, sep=None, maxsplit=-1)\n",
+      "    Return a list of the substrings in the string, using sep as the separator string.\n",
+      "    \n",
+      "      sep\n",
+      "        The separator used to split the string.\n",
+      "    \n",
+      "        When set to None (the default value), will split on any whitespace\n",
+      "        character (including \\\\n \\\\r \\\\t \\\\f and spaces) and will discard\n",
+      "        empty strings from the result.\n",
+      "      maxsplit\n",
+      "        Maximum number of splits (starting from the left).\n",
+      "        -1 (the default value) means no limit.\n",
+      "    \n",
+      "    Note, str.split() is mainly useful for data that has been intentionally\n",
+      "    delimited.  With natural text that includes punctuation, consider using\n",
+      "    the regular expression module.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(str.split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c2c54e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job_title = job_title.split(sep = \" \", maxsplit = 1)\n",
+    "type(job_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6693541d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Data', 'Analyst']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "29fd7e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data Analyst'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str.__add__(\"Data \", \"Analyst\")\n",
+    "\"Data \".__add__(\"Analyst\")\n",
+    "\"Data\" + \"Analyst\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9de24af9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Data Analyst\".__len__()\n",
+    "len(\"Data Analyst\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4d40f23b",
+   "id": "27deacf8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str.len(\"Data Analyst\")"
+   ]
   }
  ],
  "metadata": {
