--- a/Repetition.ipynb
+++ b/Repetition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24fd7431",
+   "id": "3a8729bf",
    "metadata": {},
    "source": [
     "# Function"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "148aea62",
+   "execution_count": 1,
+   "id": "7326ae4e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi, what is your name?gggi\n",
-      "Hi gggi, you are wellcome\n"
+      "Hi, what is your name? Mila\n",
+      "Hi Mila, you are wellcome\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98453134",
+   "id": "578dbc9a",
    "metadata": {},
    "source": [
     "# Class"
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "3162fba8",
+   "execution_count": 2,
+   "id": "4c5a2610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "64d5eae6",
+   "execution_count": 3,
+   "id": "769d8257",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "'Data Analyst'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "af31867b",
+   "execution_count": 4,
+   "id": "f699471a",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf26950",
+   "id": "b4c55676",
    "metadata": {},
    "source": [
     "# String build in functions"
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "6ef0b8ce",
+   "execution_count": 5,
+   "id": "dba32f85",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "'PYTHON'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "8999d55d",
+   "execution_count": 6,
+   "id": "68249fac",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "'python'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "ea206eab",
+   "execution_count": 7,
+   "id": "ecbb002c",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "'Jython'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "aac8756f",
+   "execution_count": 8,
+   "id": "36cc2c65",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "'Doto Analyst'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "3248b06f",
+   "execution_count": 9,
+   "id": "904c4e14",
    "metadata": {},
    "outputs": [
     {
@@ -237,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "c2c54e0d",
+   "execution_count": 10,
+   "id": "a15d4e84",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "list"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "6693541d",
+   "execution_count": 11,
+   "id": "f6a8d5db",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "['Data', 'Analyst']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "29fd7e45",
+   "execution_count": 12,
+   "id": "925a504d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Data Analyst'"
+       "'DataAnalyst'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "9de24af9",
+   "execution_count": 13,
+   "id": "32ed4fb1",
    "metadata": {},
    "outputs": [
     {
@@ -313,25 +313,102 @@
        "12"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"Data Analyst\".__len__()\n",
+    "str.__len__(\"Data Analyst\")\n",
     "len(\"Data Analyst\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b410f9c",
+   "metadata": {},
+   "source": [
+    "# String Formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3095278c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role = \"Data science\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bedb0a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Role: Data science'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using str.format()\n",
+    "\"Role: {}\".format(role)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3a412cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Role: Data science'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using f-string\n",
+    "f\"Role: {role}\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27deacf8",
+   "id": "de9e2100",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "str.len(\"Data Analyst\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "254cfd19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "280fcd15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
