add string formatting

--- a/Repetition.ipynb
+++ b/Repetition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a8729bf",
+   "id": "7706dbfa",
    "metadata": {},
    "source": [
     "# Function"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7326ae4e",
+   "id": "49fcda32",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578dbc9a",
+   "id": "32a81b2e",
    "metadata": {},
    "source": [
     "# Class"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c5a2610",
+   "id": "c1c72f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "769d8257",
+   "id": "1fa30b7d",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f699471a",
+   "id": "21ac5e11",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c55676",
+   "id": "6611aa02",
    "metadata": {},
    "source": [
     "# String build in functions"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dba32f85",
+   "id": "b6ebd8e8",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68249fac",
+   "id": "d8da46d6",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ecbb002c",
+   "id": "72a6626d",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "36cc2c65",
+   "id": "808745f8",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "904c4e14",
+   "id": "a8e2d4a0",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a15d4e84",
+   "id": "bb9fe0ad",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f6a8d5db",
+   "id": "bcd372fd",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "925a504d",
+   "id": "5dab6155",
    "metadata": {},
    "outputs": [
     {
@@ -298,13 +298,13 @@
    "source": [
     "str.__add__(\"Data \", \"Analyst\")\n",
     "\"Data \".__add__(\"Analyst\")\n",
-    "\"Data\" + \"Analyst\""
+    "\"Data #\" + \"Analyst\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "32ed4fb1",
+   "id": "c6de9017",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b410f9c",
+   "id": "5283a698",
    "metadata": {},
    "source": [
     "# String Formatting"
@@ -334,18 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3095278c",
+   "execution_count": 5,
+   "id": "c41e6292",
    "metadata": {},
    "outputs": [],
    "source": [
-    "role = \"Data science\""
+    "role = \"Data science\"\n",
+    "skill = \"Python\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bedb0a2a",
+   "id": "c4740907",
    "metadata": {},
    "outputs": [
     {
@@ -366,8 +367,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3a412cd3",
+   "execution_count": 6,
+   "id": "bf00d23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Role: Data science; Skill: Python'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using %-formatting (print-style string formatting)\n",
+    "\"Role: %s; Skill: %s\" % (role, skill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b7933e9e",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +399,7 @@
        "'Role: Data science'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,24 +411,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de9e2100",
+   "execution_count": 13,
+   "id": "73d57343",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python, SQL, Excel'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#join( ) method\n",
+    "years_experience = \"0123456789\"\n",
+    "\", \".join(years_experience)\n",
+    "\n",
+    "skills = [\"Python\", \"SQL\", \"Excel\"]\n",
+    "type(\", \".join(skills))\n",
+    "\", \".join(skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d4fd8312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Mark', 'Mila')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# swap variables\n",
+    "\n",
+    "aplicant_1 = \"Mila\"\n",
+    "aplicant_2 = \"Mark\"\n",
+    "\n",
+    "aplicant_1, aplicant_2 = aplicant_2, aplicant_1\n",
+    "aplicant_1, aplicant_2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "254cfd19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "280fcd15",
+   "id": "b643de1d",
    "metadata": {},
    "outputs": [],
    "source": []
