--- a/Repetition.ipynb
+++ b/Repetition.ipynb
@@ -413,7 +413,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "73d57343",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -439,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d4fd8312",
+   "id": "7a8da2b1",
    "metadata": {},
    "outputs": [
     {
@@ -464,9 +466,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "796a95a2",
+   "metadata": {},
+   "source": [
+    "# Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "57181a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Always print\n"
+     ]
+    }
+   ],
+   "source": [
+    "if True:\n",
+    "    print(\"Always print\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e43340f",
+   "metadata": {},
+   "source": [
+    "# List"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b643de1d",
+   "id": "aac06421",
    "metadata": {},
    "outputs": [],
    "source": []
