test email troubleshoot

--- a/Repetition.ipynb
+++ b/Repetition.ipynb
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7a8da2b1",
+   "id": "7d9d5580",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796a95a2",
+   "id": "e4ca413e",
    "metadata": {},
    "source": [
     "# Conditions"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "57181a9d",
+   "id": "e9585ae3",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e43340f",
+   "id": "c1549bc7",
    "metadata": {},
    "source": [
     "# List"
@@ -502,8 +502,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "f53447ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aac06421",
+   "id": "4e6086cd",
    "metadata": {},
    "outputs": [],
    "source": []
